fixed jumpy content when toggling mega menu

--- a/src/organisms/mega-menu/_mega-menu.scss
+++ b/src/organisms/mega-menu/_mega-menu.scss
@@ -11,7 +11,6 @@
 	box-shadow: 0 rhythm(0.5) rhythm(0.5) rgba($color-cyberspace, 0.1);
 
 	&[aria-hidden='false'] {
-		position: relative;
 		transform: translateY(0);
 
 		+ {
